# pico-proving-service

./: .env  .gitignore  Cargo.toml  README.md
docker/cpu/: .env.example
docker/gpu/: .env.example
