[package]
name = "pico-proving-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gen-app-id"
path = "bin/gen_app_id.rs"

[[bin]]
name = "gen-reth-inputs"
path = "bin/gen_reth_inputs.rs"

[[bin]]
name = "gen-common-pv-digest"
path = "bin/gen_common_pv_digest.rs"

[[bin]]
name = "gen-input-example"
path = "bin/gen_input_example.rs"

[[bin]]
name = "normalize-reth-inputs"
path = "bin/normalize_reth_inputs.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "test-client"
path = "bin/test_client.rs"

[[bin]]
name = "test-reth-prove"
path = "bin/test_reth_prove.rs"

[dependencies]
# pico
pico-vm = { git = "https://github.com/brevis-network/pico.git", features = ["jemalloc", "nightly-features"], tag = "v1.1.8" }
pico-perf = { git = "https://github.com/brevis-network/pico.git", tag = "v1.1.8" }

# rsp
rsp-client-executor = { git = "https://github.com/brevis-network/rsp.git", rev = "a005ee4" }
rsp-host-executor = { git = "https://github.com/brevis-network/rsp.git", features = ["execution-witness"], rev = "a005ee4" }
rsp-primitives = { git = "https://github.com/brevis-network/rsp.git", rev = "a005ee4" }
rsp-provider = { git = "https://github.com/brevis-network/rsp.git", rev = "a005ee4" }

# p3
# NOTE: Pin to known a "good" commit without recent API changes
p3-commit = { git = "https://github.com/brevis-network/Plonky3.git", rev = "a4d376b" }
p3-field = { git = "https://github.com/brevis-network/Plonky3.git", rev = "a4d376b" }
p3-symmetric = { git = "https://github.com/brevis-network/Plonky3.git", rev = "a4d376b" }
p3-koala-bear = { git = "https://github.com/brevis-network/Plonky3.git", features = [
    "nightly-features",
], rev = "a4d376b" }

# alloy
alloy-chains = { version = "0.2.17", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-provider = { version = "1.1.0", default-features = false, features = ["reqwest", "reqwest-rustls-tls", "ws"] }

# misc
anyhow = { version = "1.0", default-features = false }
base64 = "0.22"
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
crossbeam = "0.8"
dashmap = "6.1"
derive_more = { version = "2.0", features = ["constructor"] }
dotenvy = "0.15"
futures = "0.3"
hex = "0.4"
log = "0.4.21"
num_cpus = "1.16"
prost = "0.13"
rand = "0.8"
serde = { version = "1.0.205", features = ["derive", "rc"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.13", features = ["zstd"] }
tonic-web = "0.13"
tower = "0.5"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
url = "2.3"

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }

[patch.crates-io]
# revm patches
revm = { git = "https://github.com/brevis-network/revm", branch = "pico-v97-31-0-1" }
revm-bytecode = { git = "https://github.com/brevis-network/revm", branch = "pico-v97-31-0-1" }
revm-context = { git = "https://github.com/brevis-network/revm", branch = "pico-v97-31-0-1" }
revm-database = { git = "https://github.com/brevis-network/revm", branch = "pico-v97-31-0-1" }
revm-database-interface = { git = "https://github.com/brevis-network/revm", branch = "pico-v97-31-0-1" }
revm-handler = { git = "https://github.com/brevis-network/revm", branch = "pico-v97-31-0-1" }
revm-inspector = { git = "https://github.com/brevis-network/revm", branch = "pico-v97-31-0-1" }
revm-interpreter = { git = "https://github.com/brevis-network/revm", branch = "pico-v97-31-0-1" }
revm-precompile = { git = "https://github.com/brevis-network/revm", branch = "pico-v97-31-0-1" }
revm-primitives = { git = "https://github.com/brevis-network/revm", branch = "pico-v97-31-0-1" }
revm-state = { git = "https://github.com/brevis-network/revm", branch = "pico-v97-31-0-1" }
